--- a/admin_static/dashboard.html
+++ b/admin_static/dashboard.html
@@ -183,7 +183,7 @@
                 <input type="hidden" id="questionId">
                 <div class="form-group">
                     <label>Question</label>
-                    <input type="text" id="question" required>
+                    <textarea id="question" rows="6" style="width: 100%; padding: 10px; border: 1px solid #ddd; border-radius: 4px; font-family: monospace; white-space: pre-wrap;" required></textarea>
                 </div>
                 <div class="form-group">
                     <label>Option A</label>
