--- a/static/exam.html
+++ b/static/exam.html
@@ -16,7 +16,7 @@
         .timer.warning { color: #ff6b6b; }
         .container { max-width: 900px; margin: 20px auto; background: white; padding: 30px; border-radius: 10px; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
         .question { margin-bottom: 30px; padding: 20px; border: 1px solid #e0e0e0; border-radius: 5px; }
-        .question-text { font-size: 18px; font-weight: bold; color: #333; margin-bottom: 15px; }
+        .question-text { font-size: 18px; font-weight: bold; color: #333; margin-bottom: 15px; white-space: pre-wrap; }
         .options { margin-left: 10px; }
         .option { margin: 10px 0; }
         .option label { display: flex; align-items: center; padding: 10px; border-radius: 5px; cursor: pointer; transition: background 0.2s; }
